# gpt-engineer

./: .env.example  .env.sample  .env.template  .env_example  .gitignore  .langchain.db  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  BENCHMARK.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  KaliPurple--Debian 10.x 64-bit.vmdk  Makefile  Ollama_Models_Arena.py  README-CN.md  README.md  ROADMAP.md  Reza  SECURITY.md  TERMS_OF_USE.md  TODO.md  UPDATE.md  WINDOWS_README.md  Windows_Usage  ai.py  ai_benchmark_main.py  chat_to_files.py  citation.cff  config.toml  console.js  db.py  dc.yml  docker-compose.yml  entrypoint.sh  fff  (+14 more)
.devcontainer/: devcontainer.json
.feature/: files.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug-report.md  documentation-clarification.md  feature-request.md  issue-template.md  sweep-bugfix.yml  sweep-feature.yml  sweep-refactor.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: automation.yml  bandit.yml  ci.yaml  codeql.yml  main.yml  package.yml  pre-commit.yaml  pytest-action.yml  python-app.yml  release.yaml  stale.yml  validate_agent_protocol.yml
benchmark/: RESULTS.md
benchmark/calculator/: calculator_prompt
benchmark/currency_converter/: main_prompt
benchmark/file_explorer/: main_prompt  prompt
benchmark/file_organizer/: main_prompt  prompt
benchmark/image_resizer/: main_prompt  prompt
benchmark/markdown_editor/: main_prompt  prompt
benchmark/password_generator/: main_prompt  prompt
benchmark/pomodoro_timer/: main_prompt  prompt
benchmark/timer_app/: main_prompt  prompt
benchmark/todo_list/: main_prompt  prompt
benchmark/url_shortener/: main_prompt  prompt
benchmark/weather_app/: main_prompt
data/: Find_Grant_Export.xlsx
docker/: Dockerfile  Dockerfile_litellm  README.md  docker-compose.yml  entrypoint.sh  litellm_config.yaml  ollama_start.sh  requirements_litellm.txt
docs/: CONTRIBUTING.md  DOCS_BUILDING.md  WINDOWS_README.md  api_reference.rst  building_docs.md  code_conduct_link.rst  conf.py  contributing_link.rst  create_api_rst.py  custom_steps.md  disclaimer_link.rst  docs_building.md  index.rst  installation.rst  introduction.md  open_models.md  open_models.rst  quickstart.rst  readme_link.rst  requirements.txt  results_link.rst  roadmap_link.rst  tesrms_link.rst  tracing_debugging.md  usage.rst  windows_readme_link.rst
docs/applications/: gpt_engineer.applications.cli.cli_agent.CliAgent.rst  gpt_engineer.applications.cli.collect.collect_and_send_human_review.rst  gpt_engineer.applications.cli.collect.collect_learnings.rst  gpt_engineer.applications.cli.collect.send_learning.rst  gpt_engineer.applications.cli.file_selector.DisplayablePath.rst  gpt_engineer.applications.cli.learning.ask_collection_consent.rst  gpt_engineer.applications.cli.learning.check_collection_consent.rst  gpt_engineer.applications.cli.learning.extract_learning.rst  gpt_engineer.applications.cli.learning.get_session.rst  gpt_engineer.applications.cli.learning.human_review_input.rst  gpt_engineer.applications.cli.main.get_preprompts_path.rst  gpt_engineer.applications.cli.main.load_env_if_needed.rst  gpt_engineer.applications.cli.main.load_prompt.rst  gpt_engineer.applications.cli.main.main.rst
docs/benchmark/: gpt_engineer.benchmark.__main__.get_agent.rst  gpt_engineer.benchmark.__main__.main.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.assert_exists_in_source_code.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.check_evaluation_component.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.check_language.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.run_code_class_has_property.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.run_code_class_has_property_w_value.rst  gpt_engineer.benchmark.benchmarks.gpteng.eval_tools.run_code_eval_function.rst  gpt_engineer.benchmark.benchmarks.gpteng.load.eval_to_task.rst  gpt_engineer.benchmark.benchmarks.gpteng.load.expect_to_assertion.rst  gpt_engineer.benchmark.benchmarks.gpteng.load.load_gpteng.rst  gpt_engineer.benchmark.benchmarks.gptme.load.load_gptme.rst  gpt_engineer.benchmark.benchmarks.load.get_benchmark.rst  gpt_engineer.benchmark.run.print_results.rst  gpt_engineer.benchmark.run.run.rst
docs/examples/: test_llm_running.py
docs/intro/: # Table of Contents.md  ai_class.md  chat_parsing.md  db_class.md  gate.md  harmony_db_ai_steps.md  scripts.md  (+5 more)
dumpfiles/: oldreadme.md
evals/: EVAL_NEW_CODE_RESULTS.md  IMPROVE_CODE_RESULTS.md  README.md  eval_tools.py  evals_existing_code.py  evals_new_code.py  new_code_eval.yaml
example/: main_prompt
gpt_engineer/: GUI.py  __init__.py  __main__.py  ai.py  ai_class.py  ai_with_guidance.py  api.py  chat_to_files.py  code_edit_parser.py  collect.py  constants.py  db.py  domain.py  file_selector.py  learning.py  main.py  main_script.py  models.py  project_metadata.py  prompt  run.sh  steps.py  steps_module.py
identity/: clarify  fix_code  generate  philosophy  planning  qa  respec  setup  spec  unit_tests  use_qa
langsmith_evals/: __main__.py
models/: gpt-3.5-turbo.yaml  gpt-4.yaml  openai.yaml
private_e6292/: 01_df0f2_conf  02_c2d1f_conf  de3c163586.json
scripts/: benchmark.py  clean_benchmarks.py  create_package_json.sh  eval_tools.py  evals_existing_code.py  existing_code_eval.yaml  legacy_benchmark.py  print_chat.py  rerun_edited_message_logs.py  snake_game_files.txt  test_api.py
snake_test/: main_prompt
tests/: __init__.py  ai_cache.json  caching_ai.py  caching_main.py  mock_ai.py  test_ai.py  test_ai_with_guidance.py  test_ask_collection_consent.py  test_chat_parser.py  test_chat_to_files.py  test_check_collection_consent.py  test_code_vector_repository.py  test_collect.py  test_collection_consent.py  test_db.py  test_file_repository.py  test_install.py  test_parse_chat.py  test_project_config.py  test_token_usage.py
web/: README.md  web_main.py
webapp/: CHANGELOG.md  LICENSE  README.md  package.json
(+399 files in other folders)
